@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2012-05-30 (SVN):
+    * snd_sun.c: Moved the Shutdown procedure above GetDMAPos in order
+      to fix compilation.
+
+2012-05-30 (SVN):
     * gl_vidsdl.c, vid_sdl.c (VID_SetMode): SDL documentation says that
       before the first call to SDL_SetVideoMode(), SDL_WM_SetIcon() must
       be called. Do so properly.
